# chat-with-your-emails

./: .gitignore  README.md  pipeline.ipynb  pyproject.toml
config/: settings.py
scripts/: cli.py
src/: cli.py  matrix_bot.py  models.py  ollama_lock.py
src/chat/: app.py
src/embedding/: embedder.py
src/ingestion/: gmail_client.py
src/preprocessing/: body_cleaner.py  document_extractor.py  llm_processor.py  pipeline.py  vlm_processor.py
src/storage/: vector_store.py
src/tracking/: display.py  state.py
