[project]
name = "chat-with-your-emails"
version = "0.1.0"
description = "Privacy-first email RAG pipeline using local LLMs via Ollama"
requires-python = ">=3.10"
dependencies = [
    # Gmail API
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    # Ollama client
    "ollama>=0.4.0",
    # Vector store
    "qdrant-client>=1.12.0",
    # Document extraction
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    # Document-to-image conversion (for VLM processing)
    "pdf2image>=1.17.0",
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    # Utilities
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
include = ["src*", "config*", "scripts*"]

[project.scripts]
email-ingest = "src.ingestion.gmail_client:main"
email-preprocess = "src.preprocessing.pipeline:main"
email-embed = "src.preprocessing.pipeline:main_embed"
email-chat = "src.chat.app:main"
email-status = "src.cli:status"
email-resume = "src.cli:resume"
email-reset = "src.cli:reset"
email-matrix = "src.matrix_bot:main"
